...
                    }
                    
                    if (editingRecipe) {
                        Spacer(minLength: 30)
                        if isIngredient {
                            // add ingredient button
                            Button("Add Ingredient") {
                                isNewIngredient = true
                                withAnimation {
                                    editingIngredient.toggle()
                                }
                            }
                            .buttonStyle(GrowingButton())
...

                                selectedRecipe.name = newRecipeName
                            } else {
                                newRecipeName = selectedRecipe.name
                            }
                        }) {
                            Text(editingRecipe ? "Done" : "Edit")
                        }
                    }
                )
                
                
                if editingIngredient {
...
 depending on it's value.
 */
struct ToolbarToggleStyle: ToggleStyle {
    @Environment(\.colorScheme) var colorScheme

    func makeBody(configuration: Configuration) -> some View {
        return
            VStack{
                Spacer()
                ZStack {
                    Rectangle()
                        .fill((colorScheme == .dark) ? Color.black : Color.white)
                        .frame(width: screenWidth, height: 105)
...
                            .onTapGesture {
                                withAnimation {
                                    configuration.isOn = true
                                }
                            }
                            .accessibilityAddTraits(.isButton)
                            .accessibilityIdentifier("IngredientToggle")
                            Spacer()
                            VStack{
                                Image(systemName: "list.bullet")
                                    .resizable()
                                    .frame(width:23, height:23)

...
                            .onTapGesture {
                                withAnimation {
                                    configuration.isOn = false
                                }
                            }
                            .accessibilityAddTraits(.isButton)
                            .accessibilityIdentifier("MethodToggle")
                            Spacer()

                        }
                        .offset(y:-10)
                        Rectangle()
                            .fill(Color.orange)
...
